fix: correct reconciliation logic